# lexichash-trace

./: .gitignore  Cargo.toml  README.md  approx.py  plot.py
approx/: lexichash.py  minhash.py
src/: heap.rs  lib.rs  main.rs  matrix.rs  trace.rs
src/sim/: lexichash.rs  minhash.rs  mod.rs  packed_bases.rs
