[package]
name = "lexichash-trace"
version = "0.1.0"
edition = "2024"

[dependencies]
branches = "0.4"
clap = { version = "4.5", features = ["derive"] }
packed-seq = "5.0"
rand = "0.10"
rapidhash = "4.5"
rayon = "1"
rustc-hash = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
debug = false
